@@ -1,4 +1,6 @@
 <unreleased> Patrick Galbraith <patg@grazr.com> Jim Winstead <jimw@mysql.com> (4.004)
+* Add support for mysql_warning_count statement handle attribute. (Bug #25457,
+  patch from Philip Stoev)
 * Add support for mysql_multi_statements connection option. (RT #12322, based
   on patch from Doug Morris)
 
